--- a/src/Xcountry/Countrysearch.css
+++ b/src/Xcountry/Countrysearch.css
@@ -1,40 +1,37 @@
-/* App.css */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
+/* CountryApp.css */
 
-.container {
-  max-width: 800px;
-  margin: 0 auto;
+.country-app {
   padding: 20px;
 }
 
-.search-input {
+input[type="text"] {
   width: 100%;
   padding: 10px;
   margin-bottom: 20px;
   font-size: 16px;
 }
 
-.countries {
+.country-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
 }
 
 .country-card {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
 .country-card img {
-  width: 30px;
-  height: auto;
+  width: 100%;
+  border-radius: 8px;
   margin-bottom: 10px;
+}
+
+.country-card h2 {
+  font-size: 18px;
+  margin: 0;
+  text-align: center;
 }
