--- a/src/Xcountry/Countrysearch.css
+++ b/src/Xcountry/Countrysearch.css
@@ -17,14 +17,14 @@ input[type="text"] {
   gap: 20px;
 }
 
-.country-card {
+.countryCard {
   background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
 }
 
-.country-card img {
+.countryCard img {
   width: 100%;
   border-radius: 8px;
   margin-bottom: 10px;
