--- a/src/Xcountry/Countrysearch.css
+++ b/src/Xcountry/Countrysearch.css
@@ -1,37 +1,42 @@
 /* CountryApp.css */
 
 .country-app {
+  max-width: 800px;
+  margin: 0 auto;
   padding: 20px;
 }
 
 input[type="text"] {
   width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  font-size: 16px;
+  margin-bottom: 10px;
+  padding: 8px;
 }
 
 .country-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .countryCard {
-  background-color: #f5f5f5;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  width: calc(33.33% - 20px);
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
 }
 
 .countryCard img {
-  width: 100%;
-  border-radius: 8px;
+  width: 100px;
+  height: auto;
   margin-bottom: 10px;
 }
 
-.country-card h2 {
-  font-size: 18px;
+.countryCard h2 {
+  font-size: 16px;
   margin: 0;
-  text-align: center;
+}
+
+p {
+  margin-top: 10px;
 }
