--- a/src/Flag/Flag.css
+++ b/src/Flag/Flag.css
@@ -1,39 +1,49 @@
-.App {
-    font-family: sans-serif;
-    text-align: center;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 0 20px;
-  }
-  
-  .country {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .country img {
-    width: 50px;
-    height: auto;
-    margin-right: 10px;
-  }
-  
-  .country-name {
-    font-size: 18px;
-    font-weight: bold;
-  }
-  
-  .error-message {
-    color: red;
-    font-weight: bold;
-  }
-  
+/* .App {
+  font-family: sans-serif;
+  text-align: center;
+  overflow-y: auto;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 0 20px;
+}
+
+.country {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.country img {
+  width: 50px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.country-name {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.error-message {
+  color: red;
+  font-weight: bold;
+} */
+
+.countries-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  max-height: 500px; /* Adjust height as needed */
+  overflow-y: auto; /* Enables vertical scrolling */
+  border: 1px solid #ddd;
+  padding: 10px;
+}
